--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@uiw/react-md-editor": "^3.4.12",
+    "dexie": "^3.0.3",
     "qrcode": "^1.4.4",
     "react": "^16",
     "react-color": "^2.19.3",
