--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "xml2js": "^0.4.23"
   },
@@ -55,6 +56,7 @@
     "@types/diff": "^5.0.1",
     "@types/qrcode": "^1.4.1",
     "@types/react-color": "^3.0.5",
+    "@types/uuid": "^8.3.1",
     "@types/xml2js": "^0.4.9",
     "autoprefixer": "^9.8.6",
     "gulp": "^4.0.2",
