--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@uiw/react-md-editor": "^3.4.12",
     "dexie": "^3.0.3",
     "qrcode": "^1.4.4",
-    "react": "^16",
+    "react": "^16.14.0",
     "react-color": "^2.19.3",
     "react-diff-viewer": "^3.1.1",
-    "react-dom": "^16",
+    "react-dom": "^16.14.0",
     "react-scripts": "4.0.3",
+    "slate": "^0.66.5",
+    "slate-history": "^0.66.0",
+    "slate-react": "^0.69.0",
     "typescript": "^4.3.5",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
