--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@tippyjs/react": "^4.2.6",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.15",
@@ -22,6 +23,7 @@
     "react-diff-viewer": "^3.1.1",
     "react-dom": "^16.14.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.0",
     "slate": "^0.66.5",
     "slate-history": "^0.66.0",
     "slate-react": "^0.69.0",
