--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^16.14.0",
     "react-color": "^2.19.3",
     "react-diff-viewer": "^3.1.1",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^16.14.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.0",
