--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@uiw/react-md-editor": "^3.4.12",
+    "date-fns": "^2.25.0",
     "dexie": "^3.0.3",
     "qrcode": "^1.4.4",
     "react": "^16.14.0",
@@ -24,6 +25,7 @@
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^16.14.0",
+    "react-dropzone": "^11.4.2",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.0",
     "slate": "^0.66.5",
