--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
+    "@emotion/css": "^11.5.0",
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.3",
     "@tailwindcss/forms": "^0.3.3",
@@ -15,16 +16,14 @@
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
-    "@uiw/react-md-editor": "^3.4.12",
     "date-fns": "^2.25.0",
     "dexie": "^3.0.3",
     "qrcode": "^1.4.4",
-    "react": "^16.14.0",
+    "react": "^17.0.2",
     "react-color": "^2.19.3",
-    "react-diff-viewer": "^3.1.1",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.0",
@@ -66,6 +65,7 @@
     "@types/diff": "^5.0.1",
     "@types/qrcode": "^1.4.1",
     "@types/react-color": "^3.0.5",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/uuid": "^8.3.1",
     "@types/xml2js": "^0.4.9",
     "autoprefixer": "^9.8.6",
@@ -75,6 +75,7 @@
     "jest": "^26.6.0",
     "postcss": "^7.0.36",
     "prettier": "2.3.2",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   }
 }
