--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^17.0.9",
     "date-fns": "^2.25.0",
     "dexie": "^3.0.3",
+    "fuse.js": "^6.4.6",
     "lodash": "^4.17.21",
     "qrcode": "^1.4.4",
     "react": "^17.0.2",
