--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "qrcode": "^1.4.4",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
+    "react-datepicker": "^4.5.0",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
@@ -67,6 +68,7 @@
     "@types/diff": "^5.0.1",
     "@types/qrcode": "^1.4.1",
     "@types/react-color": "^3.0.5",
+    "@types/react-datepicker": "^4.3.2",
     "@types/react-test-renderer": "^17.0.1",
     "@types/uuid": "^8.3.1",
     "@types/xml2js": "^0.4.9",
