--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "qrcode": "^1.4.4",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.5.0",
     "react-dnd": "^14.0.4",
@@ -67,6 +68,7 @@
   "devDependencies": {
     "@types/diff": "^5.0.1",
     "@types/qrcode": "^1.4.1",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-color": "^3.0.5",
     "@types/react-datepicker": "^4.3.2",
     "@types/react-test-renderer": "^17.0.1",
