--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "bake": "bash build-single-file.sh",
-    "cake": "bash build-single-file-new-version.sh"
+    "cake": "bash build-single-file-new-version.sh",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -75,6 +76,8 @@
     "@types/uuid": "^8.3.1",
     "@types/xml2js": "^0.4.9",
     "autoprefixer": "^9.8.6",
+    "cypress": "^9.5.2",
+    "eslint-plugin-cypress": "^2.12.1",
     "gulp": "^4.0.2",
     "gulp-inline-source": "^4.0.0",
     "gulp-replace": "^1.1.3",
