--- a/package.json
+++ b/package.json
@@ -3,41 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.2.0",
-    "@emotion/css": "^11.5.0",
-    "@headlessui/react": "^1.4.0",
-    "@heroicons/react": "^1.0.3",
-    "@tailwindcss/forms": "^0.3.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@tippyjs/react": "^4.2.6",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.19",
-    "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9",
-    "date-fns": "^2.25.0",
-    "dexie": "^3.0.3",
-    "fuse.js": "^6.4.6",
-    "lodash": "^4.17.21",
-    "qrcode": "^1.4.4",
-    "react": "^17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-color": "^2.19.3",
-    "react-datepicker": "^4.5.0",
-    "react-dnd": "^14.0.4",
-    "react-dnd-html5-backend": "^14.0.2",
-    "react-dom": "^17.0.2",
-    "react-dropzone": "^11.4.2",
+    "@craco/craco": "6.2.0",
+    "@emotion/css": "11.5.0",
+    "@headlessui/react": "1.4.0",
+    "@heroicons/react": "1.0.3",
+    "@tailwindcss/forms": "0.3.3",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "11.2.7",
+    "@testing-library/user-event": "12.8.3",
+    "@tippyjs/react": "4.2.6",
+    "@types/jest": "26.0.24",
+    "@types/node": "12.20.19",
+    "@types/react": "17.0.15",
+    "@types/react-dom": "17.0.9",
+    "date-fns": "2.25.0",
+    "dexie": "3.0.3",
+    "fuse.js": "6.4.6",
+    "lodash": "4.17.21",
+    "qrcode": "1.4.4",
+    "react": "17.0.2",
+    "react-beautiful-dnd": "13.1.0",
+    "react-color": "2.19.3",
+    "react-datepicker": "4.5.0",
+    "react-dnd": "14.0.4",
+    "react-dnd-html5-backend": "14.0.2",
+    "react-dom": "17.0.2",
+    "react-dropzone": "11.4.2",
     "react-scripts": "4.0.3",
-    "react-select": "^5.2.0",
-    "slate": "^0.66.5",
-    "slate-history": "^0.66.0",
-    "slate-react": "^0.69.0",
-    "typescript": "^4.3.5",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2",
-    "xml2js": "^0.4.23"
+    "react-select": "5.2.0",
+    "slate": "0.66.5",
+    "slate-history": "0.66.0",
+    "slate-react": "0.69.0",
+    "typescript": "4.3.5",
+    "uuid": "8.3.2",
+    "web-vitals": "1.1.2",
+    "xml2js": "0.4.23"
   },
   "scripts": {
     "start": "craco start",
@@ -67,24 +67,24 @@
     ]
   },
   "devDependencies": {
-    "@types/diff": "^5.0.1",
-    "@types/qrcode": "^1.4.1",
-    "@types/react-beautiful-dnd": "^13.1.2",
-    "@types/react-color": "^3.0.5",
-    "@types/react-datepicker": "^4.3.2",
-    "@types/react-test-renderer": "^17.0.1",
-    "@types/uuid": "^8.3.1",
-    "@types/xml2js": "^0.4.9",
-    "autoprefixer": "^9.8.6",
-    "cypress": "^9.5.2",
-    "eslint-plugin-cypress": "^2.12.1",
-    "gulp": "^4.0.2",
-    "gulp-inline-source": "^4.0.0",
-    "gulp-replace": "^1.1.3",
-    "jest": "^26.6.0",
-    "postcss": "^7.0.36",
+    "@types/diff": "5.0.1",
+    "@types/qrcode": "1.4.1",
+    "@types/react-beautiful-dnd": "13.1.2",
+    "@types/react-color": "3.0.5",
+    "@types/react-datepicker": "4.3.2",
+    "@types/react-test-renderer": "17.0.1",
+    "@types/uuid": "8.3.1",
+    "@types/xml2js": "0.4.9",
+    "autoprefixer": "9.8.6",
+    "cypress": "9.5.2",
+    "eslint-plugin-cypress": "2.12.1",
+    "gulp": "4.0.2",
+    "gulp-inline-source": "4.0.0",
+    "gulp-replace": "1.1.3",
+    "jest": "26.6.0",
+    "postcss": "7.0.36",
     "prettier": "2.3.2",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "17.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   }
 }
