--- a/.github/workflows/build-on-tag.yml
+++ b/.github/workflows/build-on-tag.yml
@@ -32,3 +32,7 @@ jobs:
         with:
           files: builds/legendlist.html
           fail_on_unmatched_files: true
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: builds
